@@ -1,3 +1,12 @@
+2026-02-08T03:14:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21791396410 # 871
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
+* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-07T02:31:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772658125 # 870
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
